# excel-dumper

./: .gitignore  .pre-commit-config.yaml  Helpdesk Export.xls  MANIFEST.in  README.md  conftest.py  coverage.xml  debug.py  dumper.ps1  dumper.py  dumper_Helpdesk Export_2025-07-21T11-54-22-0400.csv  helpdesk-test.xlsx  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_basic_ci.py
.github/workflows/: ci.ml  ci.yml
excel_dumper/: __init__.py  dumper.py
excel_dumper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  coverage.xml  enhanced_conftest.py  run_all_tests_direct.py  test_cli_interface.py  test_coverage_boost.py  test_dumper.py  test_example_usage.py  test_excel_extraction.py  test_file_operations.py  test_fixes_reference.py  test_targeted_coverage.py  update_conftest.py
